@@ -40,7 +40,8 @@ Fixed bugs on esxdos handler:
 *added ESXDOS_MODE_CREAT_TRUNC mode when opening files
 *BCDE was not returning from a f_seek call
 *fixed mode OPEN_CREAT|WRITE which has appending data after a seek instead of overwriting
-*added f_stat,f_unlink,f_rename calls
+*added f_stat,f_unlink,f_rename,m_drive_info calls
+*fixed loading help screen on esxdos nmi handler
 
 Updated to the last Next SD image
 
